# cloud-shield-ai

./: .gitignore  README.md  example_execution.txt  pyproject.toml  result.md  result.txt
cloud_shield_ai/: 0_create_playground.py  1_explore_and_exploit.py  __init__.py
cloud_shield_ai/agents/crew/: agents.py  crew.py  tasks.py
cloud_shield_ai/agents/crew copy/: agents.py  crew.py
cloud_shield_ai/agents/crew copy/tools/: authentication.py
cloud_shield_ai/agents/crew/tools/: __init__.py  execute.py  monitor.py  utility.py
cloud_shield_ai/generator/: actions.json  playground.py
cloud_shield_ai/utils/: __init__.py  aws.py  aws_utils.py  credentials.json
cloud_shield_ai/utils/sample_data/: financial_reports.txt  office_contact_info.txt  password_credentials.txt  project_details.txt
