[tool.poetry]
name = "cloud-shield-ai"
version = "0.1.0"
description = ""
authors = ["Piergiuseppe Mallozzi <piergiuseppe.mallozzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
names = "^0.3.0"
boto3 = "^1.34.117"
loguru = "^0.7.2"
botocore = "^1.34.117"
crewai = ">=0.11.0" 
langgraph = ">=0.0.15"
crewai-tools = "^0.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
